syntax = "proto3";

package GoGoTalk.ProtoBuf;

import "Result.proto";
import "UserInfo.proto";

message GetUserListRequest {
	string UserID = 1;
}

message GetUserListResponse {
	Result Result = 1;
	repeated UserInfo UserList = 2;
}