syntax = "proto3";

package pb;

option csharp_namespace="pb";

import "result.proto";

message AddFriendsRequest {
  string UserID = 1;
  repeated string UserIDList = 2;
}

message AddFriendsResponse {
  Result Result = 1;
}